# libhttppp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppProperties.json  LICENSE  README.md  config.h.in  event.h.in  libhttppp.kdev4
.kdev4/: libhttppp.kdev4
cmake/: FindOpenSSL.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  httpauth.cpp  httpclient.cpp  httpcon.cpp  httpcookie.cpp  httpform.cpp  httphello.cpp  httpproxy.cpp  httpsysinfo.cpp
src/: CMakeLists.txt  base64.cpp  base64.h  connections.cpp  connections.h  event.cpp  event.h  eventapi.h  exception.cpp  exception.h  http.cpp  http.h  httpd.cpp  httpd.h  httpdefinitions.h  https.cpp  https.h  libhttp++.cmake  libhttppp.cmake  mimetypes.h  queue.h  session.cpp  session.h  socket.cpp  socket.h  ssl.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h  win32.h
src/appproxy/auth/: auth.h  session.h
src/cmake/: httpppConfig.cmake
src/event/: epoll.cpp  iocp.cpp  kqueue.cpp  select.cpp
src/event/epoll/: epoll.cpp  epoll.h
src/event/iocp/: iocp.cpp  iocp.h
src/event/select/: select.cpp  select.h
src/os/: CMakeLists.txt  os.h
src/os/Unix/: lock.h  mutex.cpp  mutex.h  select.h  socket.cpp  socket.h  thread.cpp  thread.h  threadpool.cpp  threadpool.h
src/os/Unix/BSD/: kqueue.h
src/os/Unix/Linux/: epoll.cpp  epoll.h
src/os/Windows/: iocp.cpp  iocp.h  mutex.cpp  mutex.h  socket.cpp  socket.h  sysinfo.cpp  sysinfo.h  thread.cpp  thread.h  threadpool.h
src/os/event/: event.cpp  event.h
src/os/event/epoll/: epoll.cpp  epoll.h
src/os/event/iocp/: iocp.cpp  iocp.h
src/os/event/kqueue/: kqueue.h
src/os/unix/: console.cpp  console.h  ctrlhandler.cpp  ctrlhandler.h  lock.cpp  lock.h  socket.cpp  socket.h  sysinfo.cpp  sysinfo.h  thread.cpp  thread.h
src/os/windows/: console.cpp  console.h  ctrlhandler.cpp  ctrlhandler.h  inttype.h  lock.cpp  lock.h  socket.cpp  socket.h  sysinfo.cpp  sysinfo.h  thread.cpp  thread.h
src/queues/: epoll.cpp  iocp.cpp
test/: CMakeLists.txt  connection.cpp  connection_test.cpp  favico.h  favicon_ico.h  header_png.h  httpauth.cpp  httpcon.cpp  httpcon.cpp~  httpcookie.cpp  httpform.cpp  httpproxy.cpp  httpsysinfo.cpp
